@@ -29,6 +29,7 @@ Project Leader / Developer:
 - Markus Unterwaditzer
 - Joe Esposito <joe@joeyespo.com>
 - Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>
+- immerrr <immerrr@gmail.com>
 
 Contributors of code for werkzeug/examples are:
 
